<resources>
    <string name="app_name">LoginActivity</string>

    <string name="action_settings">Settings</string>

    //lines to be added are below
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Samsung">SAMSUNG</string>
    <string name="OFF">10% Off</string>
    <string name="CONDITIONS">Conditions apply*</string>
    <string name="APPLE">APPLE</string>
    <string name="Oneplus">ONEPLUS</string>
    <string name="samsungList">Samsung List</string>
    <string name="appleList">IphoneList</string>
    <string name="oneplusList">OnePlus List</string>

</resources>
