<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xback"
    android:gravity="center_horizontal"

    android:orientation="vertical"

    tools:context="com.example.loginactivity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_design"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:paddingLeft="2dp"
            android:textColorHint="@android:color/background_dark" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_design"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:textColorHint="@android:color/background_dark"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/buttons"
        android:padding="20dp"

        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="@string/register"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#04ea00"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>